--- a/src/css/home/_carrousel.scss
+++ b/src/css/home/_carrousel.scss
@@ -7,6 +7,7 @@
     height: 600px;
 
     .logo{
+        user-select: none;
         z-index: 3;
         position: absolute;
         top: 20px;
@@ -22,12 +23,16 @@
         position: absolute;
         top: 0;
         left: 0;
+
         img{
+            user-select: none;
             opacity: 0;
             height: 100%;
             position: absolute;
             object-fit: cover;
+            transition: all 1s ease;
         }
+
         img.selected{
             opacity: 1;
         }
@@ -79,15 +84,50 @@
             padding: 7px 30px;
             text-transform: uppercase;
             letter-spacing: 2px;
+            transition: background 0.2s;
+            
+            &:hover{
+                background-color: rgba(134, 181, 212, 0.2);
+            }
+
+            &:active{
+                transform: scale(0.99);
+            }
             @include font (16px, 400, $white)
         }
     }
 
     .fade{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
         width: 100%;
-        height: 100%;
+        height: 80%;
         position: absolute;
-        bottom: 0;
-        background-image: linear-gradient(to bottom, transparent 60%, black);
+        bottom: -40%;
+        background-image: linear-gradient(to bottom, transparent, black 50%, transparent);
+
+        ul{
+            position: relative;
+            top: 20px;
+            z-index: 4;
+            display: flex;
+            list-style: none;
+            width: 25%;
+            justify-content: space-between;
+
+            li{
+                width: 10px;
+                height: 10px;
+                border-radius: 50%;
+                background-color: $gray;
+                transition: all 0.5s;
+            }
+
+            li.selected{
+                background-color: $white;
+            }
+        }
     }
 }
