--- a/src/css/home/home.scss
+++ b/src/css/home/home.scss
@@ -3,7 +3,7 @@ $black: rgb(0, 0, 0);
 $gray: rgb(83, 83, 83);
 $dark-blue: rgb(58, 81, 108);
 $teal: rgb(0, 128, 128);
-
+$orange: rgb(202, 80, 8);
 
 @mixin font($size, $weight, $color){
     font-size: $size;
