--- a/src/css/home/_carrousel.scss
+++ b/src/css/home/_carrousel.scss
@@ -28,6 +28,7 @@
             user-select: none;
             opacity: 0;
             height: 100%;
+            width: 100%;
             position: absolute;
             object-fit: cover;
             transition: all 1s ease;
