--- a/src/css/home/_menu.scss
+++ b/src/css/home/_menu.scss
@@ -12,7 +12,7 @@
 
 .menu{
     width: 55%;
-    height: 100%;
+    height: 600px;
     list-style: none;
     position: absolute;
     z-index: 10;
@@ -26,6 +26,7 @@
     justify-content: flex-start;
     gap: 13px;
     box-shadow: -5px 5px 20px 20px rgba(0, 0, 0, 0.3);
+    animation: showMenu 0.25s;
     
     .menu-opt{
         user-select: none;
@@ -34,4 +35,10 @@
         }
     }
     @include font(22px, 600, $black)
+}
+
+@keyframes showMenu {
+    0%{
+        transform: translateX(100%);
+    }
 }
