--- a/src/css/home/_shop.scss
+++ b/src/css/home/_shop.scss
@@ -34,4 +34,143 @@
             @include font(17px, 300, $white)
         }
     }
+
+    .shop-images{
+        margin-top: 50px;
+        padding: 10px;
+        display: flex;
+        gap: 10px;
+
+        .item{
+            position: relative;
+            flex-grow: 1;
+
+            img{
+                width: 100%;
+            }
+
+            &:nth-child(2){
+                position: relative;
+                top: 30px;
+            }
+
+            .dot{
+                cursor: pointer;
+                position: absolute;
+                width: 29px;
+                height: 29px;
+                background-color: rgba(0, 0, 0, 0.4);
+                border-radius: 50%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                transition: background 0.2s;
+                z-index: 15;
+
+                .mid-dot{
+                    background-color: $white;
+                    width: 40%;
+                    height: 40%;
+                    border-radius: 50%;
+                    box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.2);
+
+                }
+
+                &:hover{
+                    background-color: rgba(0, 0, 0, 0.6);
+                    outline: 2px solid lighten($color: $gray, $amount: 30);
+                    .mid-dot{
+                        transform: scale(0.92);
+                    }
+                }
+                &:hover ~ .item-info{
+                    display: flex;
+                }
+            }
+
+            .item-info{
+                cursor: pointer;
+                z-index: 10;
+                background-color: $white;
+                position: absolute;
+                display: none;
+                flex-direction: column;
+                padding: 10px;
+                padding-right: 30px;
+                box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.164);
+                width: max-content;
+                gap: 3px;
+
+                &:hover{
+                    display: flex;
+                }
+
+                .new{
+                    @include font(16px, 600, $orange)
+                }
+
+                .item-name{
+                    @include font(17px, 600, $gray)
+                }
+
+                .item-price{
+                    display: flex;
+                    justify-content: flex-start;
+                    align-items: flex-start;
+                    gap: 2px;
+
+                    .dollar{
+                        @include font(14px, 600, $black)
+                    }
+                    
+                    @include font(20px, 600, $black)
+                }
+
+                .arrow{
+                    position: absolute;
+                    right: 2px;
+                    height: 100%;
+                    top: 50%;
+                    transform: translateY(-50%);
+                    border-left: 1px solid lighten($color: $gray, $amount: 40);;
+
+                    &:hover{
+                        padding: 1px;
+                    }
+                }
+            }
+        }
+    }
+
+    #dot-1{
+        top: 59px;
+        left: 4px;
+    }
+
+    #dot-2{
+        top: 35px;
+        left: 19px;
+    }
+
+    #dot-3{
+        top: 65px;
+        left: 9px;
+    }
+
+    #item-1{
+        left: 2px;
+        top: 80px;
+    }
+
+    #item-2{
+        left: 10px;
+        top: 56px;
+    }
+
+    #item-3{
+        left: 2px;
+        top: 86px;
+    }
+    
+
 }
