--- a/src/css/home/home.css
+++ b/src/css/home/home.css
@@ -45,6 +45,7 @@ body {
           user-select: none;
   opacity: 0;
   height: 100%;
+  width: 100%;
   position: absolute;
   -o-object-fit: cover;
      object-fit: cover;
@@ -157,7 +158,7 @@ body {
 
 .menu {
   width: 55%;
-  height: 100%;
+  height: 600px;
   list-style: none;
   position: absolute;
   z-index: 10;
@@ -171,6 +172,7 @@ body {
   justify-content: flex-start;
   gap: 13px;
   box-shadow: -5px 5px 20px 20px rgba(0, 0, 0, 0.3);
+  animation: showMenu 0.25s;
   font-size: 22px;
   font-weight: 600;
   color: rgb(0, 0, 0);
@@ -184,6 +186,11 @@ body {
   color: #a0a0a0;
 }
 
+@keyframes showMenu {
+  0% {
+    transform: translateX(100%);
+  }
+}
 .shop {
   width: 100%;
   padding-top: 200px;
@@ -222,4 +229,127 @@ body {
   font-size: 17px;
   font-weight: 300;
   color: rgb(255, 255, 255);
+}
+.shop .shop-images {
+  margin-top: 50px;
+  padding: 10px;
+  display: flex;
+  gap: 10px;
+}
+.shop .shop-images .item {
+  position: relative;
+  flex-grow: 1;
+}
+.shop .shop-images .item img {
+  width: 100%;
+}
+.shop .shop-images .item:nth-child(2) {
+  position: relative;
+  top: 30px;
+}
+.shop .shop-images .item .dot {
+  cursor: pointer;
+  position: absolute;
+  width: 29px;
+  height: 29px;
+  background-color: rgba(0, 0, 0, 0.4);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background 0.2s;
+  z-index: 15;
+}
+.shop .shop-images .item .dot .mid-dot {
+  background-color: rgb(255, 255, 255);
+  width: 40%;
+  height: 40%;
+  border-radius: 50%;
+  box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.2);
+}
+.shop .shop-images .item .dot:hover {
+  background-color: rgba(0, 0, 0, 0.6);
+  outline: 2px solid #a0a0a0;
+}
+.shop .shop-images .item .dot:hover .mid-dot {
+  transform: scale(0.92);
+}
+.shop .shop-images .item .dot:hover ~ .item-info {
+  display: flex;
+}
+.shop .shop-images .item .item-info {
+  cursor: pointer;
+  z-index: 10;
+  background-color: rgb(255, 255, 255);
+  position: absolute;
+  display: none;
+  flex-direction: column;
+  padding: 10px;
+  padding-right: 30px;
+  box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.164);
+  width: -moz-max-content;
+  width: max-content;
+  gap: 3px;
+}
+.shop .shop-images .item .item-info:hover {
+  display: flex;
+}
+.shop .shop-images .item .item-info .new {
+  font-size: 16px;
+  font-weight: 600;
+  color: rgb(202, 80, 8);
+}
+.shop .shop-images .item .item-info .item-name {
+  font-size: 17px;
+  font-weight: 600;
+  color: rgb(83, 83, 83);
+}
+.shop .shop-images .item .item-info .item-price {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 2px;
+  font-size: 20px;
+  font-weight: 600;
+  color: rgb(0, 0, 0);
+}
+.shop .shop-images .item .item-info .item-price .dollar {
+  font-size: 14px;
+  font-weight: 600;
+  color: rgb(0, 0, 0);
+}
+.shop .shop-images .item .item-info .arrow {
+  position: absolute;
+  right: 2px;
+  height: 100%;
+  top: 50%;
+  transform: translateY(-50%);
+  border-left: 1px solid #b9b9b9;
+}
+.shop .shop-images .item .item-info .arrow:hover {
+  padding: 1px;
+}
+.shop #dot-1 {
+  top: 59px;
+  left: 4px;
+}
+.shop #dot-2 {
+  top: 35px;
+  left: 19px;
+}
+.shop #dot-3 {
+  top: 65px;
+  left: 9px;
+}
+.shop #item-1 {
+  left: 2px;
+  top: 80px;
+}
+.shop #item-2 {
+  left: 10px;
+  top: 56px;
+}
+.shop #item-3 {
+  left: 2px;
+  top: 86px;
 }/*# sourceMappingURL=home.css.map */
